# sessions

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/: changelog.md
scripts/: README.md  diagnose_discord.py  diagnose_headers.py  diagnose_ls.py  diagnose_whatsapp_restore.py  probe_codec_cryptokey.py  probe_cryptokey.py  roundtrip_test.py  test_dom_storage.py  verify_discord_capture.py  verify_dom_storage_roundtrip.py  verify_full_roundtrip.py  verify_idb_roundtrip.py
src/sessions/: __init__.py  __main__.py  cdp.py  cli.py  dashboard.py  idb.py  manager.py  persistence.py  profile.py  server.py  utils.py
tests/: __init__.py  fakes.py  test_api.py  test_context_daemon.py  test_focus_live.py  test_idb.py  test_integration.py  test_manager.py  test_misc.py  test_move_tab.py  test_persistence.py  test_profile.py  test_regressions.py
